apps/boutique-lite/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boutique-lite
spec:
  hostnames:
    - app.waeltarabishi-devops.online
  parentRefs:
    - name: public-gateway
      namespace: default
      sectionName: http
    - name: public-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: frontend
          port: 80
